--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -10,3 +10,7 @@
         <a href="/post/{{post.id}}">{{post.comments.length}} comment(s)</a>
     </div>
 </article>
+{{#if loggedIn}}
+<script src="/javascript/comment.js"></script>
+<script src="/javascript/upvote.js"></script>
+{{/if}}
